develop branch added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <h2>Hello This is a Github Practice Repo</h2>
 
-    <h3 class="mt-5">Branch - <span class="text-danger">Master</span> </h3>
+    <h3 class="mt-5">Branch - <span class="text-success">Develop</span> </h3>
+    <p>This is a development branch, please if you want to make any change, make sure to use this branch</p>
   </body>
 </html>
