--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h3 class="mt-5">Branch - <span class="text-success">Develop</span> </h3>
     <p>This is a development branch, please if you want to make any change, make sure to use this branch</p>
     <p class="mt-3">QA branch added</p>
+    <p>after making revert in qa</p>
   </body>
 </html>
