--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <h3 class="mt-5">Branch - <span class="text-success">Develop</span> </h3>
     <p>This is a development branch, please if you want to make any change, make sure to use this branch</p>
     <p class="mt-3">QA branch added</p>
+    <p>after making revert in qa</p>
+    <h1>and this will be removed</h1>
+    
+    <img class="mb-5" width="800px" src="https://www.imgacademy.com/sites/default/files/styles/scale_1700w/public/2022-07/img-homepage-meta_0.jpg?itok=LMirU0Ik" alt="">
   </body>
 </html>
